# scribe

./: .env
scribe/: .env  ACTIONABLE_ASSISTANT_IMPLEMENTATION.md  ACTION_ASSISTANT_GUIDE.md  LICENSE  README.md  SECURITY.md  TESTING_GUIDE.md  index.html  package-lock.json  package.json
scribe/scribe-api/: .env  Cargo.toml  INTEGRATION.md  LOCAL_SETUP.md  README.md  SUMMARY.md  env.example  setup-local.ps1  test-api.ps1
scribe/scribe-api/.cargo/: config.toml
scribe/scribe-api/deploy/: deploy.sh  ghost-api.service  nginx.conf  scribe-api.service  setup-vps.sh
scribe/scribe-api/migrations/: 001_initial_schema.sql
scribe/scribe-api/src/: config.rs  main.rs
scribe/scribe-api/src/db/: pool.rs
scribe/scribe-api/src/middleware/: auth.rs  cors.rs
scribe/scribe-api/src/models/: audio.rs  chat.rs  mod.rs  user.rs
scribe/scribe-api/src/routes/: audio.rs  auth.rs  chat.rs  health.rs  mod.rs  models.rs
scribe/scribe-api/src/services/: license.rs  mod.rs  openrouter.rs  payment.rs  whisper.rs
scribe/scripts/: generate-icons.js  prepare-assets.js
scribe/src/: App.tsx  global.css  main.tsx  vite-env.d.ts
scribe/src-tauri/: .gitignore  Cargo.toml  build.rs  ghost.desktop  info.plist  scribe.desktop  tauri.conf.json
scribe/src-tauri/capabilities/: cross-platform.json  default.json
scribe/src-tauri/icons/: icon.icns
scribe/src-tauri/src/: activate.rs  api.rs  capture.rs  lib.rs  main.rs  shortcuts.rs  window.rs
scribe/src-tauri/src/assistant/: audit.rs  commands.rs  mod.rs  policy.rs  sandbox.rs  types.rs  validator.rs
scribe/src-tauri/src/assistant/executor/: fs_adapter.rs  mod.rs  snapshot.rs  worker.rs
scribe/src-tauri/src/assistant/planner/: deterministic.rs  llm.rs  mod.rs  verifier.rs
scribe/src-tauri/src/db/: main.rs  mod.rs
scribe/src-tauri/src/db/migrations/: assistant.sql  chat-history.sql  system-prompts.sql
scribe/src-tauri/src/speaker/: commands.rs  linux.rs  macos.rs  mod.rs  windows.rs
scribe/src/components/: CustomCursor.tsx  DragButton.tsx  GetLicense.tsx  Overlay.tsx  index.ts
scribe/src/components/Header/: index.tsx
scribe/src/components/Markdown/: copy-button.tsx  index.tsx
scribe/src/components/Selection/: index.tsx
scribe/src/components/TextInput/: index.tsx
scribe/src/config/: ai-providers.constants.ts  constants.ts  index.ts  shortcuts.ts  stt.constants.ts
scribe/src/contexts/: app.context.tsx  index.ts  theme.context.tsx
scribe/src/hooks/: index.ts  useActionAssistant.ts  useApp.ts  useCompletion.ts  useCopyToClipboard.ts  useCustomProvider.ts  useCustomSttProviders.ts  useGlobalShortcuts.ts  useHistory.ts  useSettings.ts  useShortcuts.ts  useSystemAudio.ts  useSystemPrompts.ts  useTitles.ts  useVersion.ts  useWindow.ts
scribe/src/lib/: analytics.ts  chat-constants.ts  curl-validator.ts  index.ts  platform-instructions.ts  platform.ts  utils.ts  version.ts
scribe/src/types/: assistant.ts  completion.hook.ts  completion.ts  context.type.ts  index.ts  provider.type.ts  settings.hook.ts  settings.ts  shortcuts.ts  system-prompts.ts
scribe/tests/assistant/: integration.test.ts  security.test.ts
(+88 files in other folders)
